@@ -5,8 +5,8 @@
 #else
 #define	USED
 #endif
-static const char sccsid[] USED = "@(#)dpost.sl	4.8 (gritter) 9/19/05";
-const char creator[] = "Heirloom Documentation Tools - dpost 4.8 (gritter) 9/19/05";
+static const char sccsid[] USED = "@(#)dpost.sl	4.9 (gritter) 9/20/05";
+const char creator[] = "Heirloom Documentation Tools - dpost 4.9 (gritter) 9/20/05";
 /* SLIST */
 /*
 asciitype.c:	Sccsid @(#)asciitype.c	1.4 (gritter) 4/17/03	
@@ -28,8 +28,8 @@ pictures.c: * Sccsid @(#)pictures.c	1.4 (gritter) 9/9/05
 ps_include.c: * Sccsid @(#)ps_include.c	1.5 (gritter) 8/13/05
 request.c: * Sccsid @(#)request.c	1.3 (gritter) 8/9/05
 request.h: * Sccsid @(#)request.h	1.3 (gritter) 8/9/05
-../afm.c: * Sccsid @(#)afm.c	1.29 (gritter) 9/18/05
-../afm.h: * Sccsid @(#)afm.h	1.10 (gritter) 9/11/05
+../afm.c: * Sccsid @(#)afm.c	1.30 (gritter) 9/20/05
+../afm.h: * Sccsid @(#)afm.h	1.11 (gritter) 9/20/05
 ../makedev.c: * Sccsid @(#)makedev.c	1.10 (gritter) 9/8/05
 ../dev.h: * Sccsid @(#)dev.h	1.7 (gritter) 9/8/05
 */
